Implement sharedDegrees pipe

--- a/src/app/moment-tensor/axes/axes.component.html
+++ b/src/app/moment-tensor/axes/axes.component.html
@@ -32,7 +32,7 @@
       Plunge
     </mat-header-cell>
     <mat-cell *matCellDef="let axis">
-      {{ round(axis.plunge) }}&deg;
+      {{ axis.plunge | sharedDegrees }}
     </mat-cell>
   </ng-container>
 
@@ -41,7 +41,7 @@
       Azimuth
     </mat-header-cell>
     <mat-cell *matCellDef="let axis">
-      {{ round(axis.azimuth) }}&deg;
+      {{ axis.azimuth | sharedDegrees }}
     </mat-cell>
   </ng-container>
 
