Remove contributorList pipe from executive pins

--- a/src/app/executive/origin-pin/origin-pin.component.html
+++ b/src/app/executive/origin-pin/origin-pin.component.html
@@ -5,7 +5,7 @@
     </mat-card-title>
     <mat-card-subtitle>
       Contributed by
-      <span [innerHTML]="product | contributorList:event:contributors"></span>
+      <shared-product-attribution [product]="product"></shared-product-attribution>
     </mat-card-subtitle>
     <mat-card-content>
       <dl>
