--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,15 +1,11 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
   <ul class="executive-summary-pins">
     <li class="executive-summary-pin">
-      <origin-pin class="pin-view"
-          [contributors]="contributorService.contributors$ | async"
-          [event]="event">
+      <origin-pin class="pin-view" [event]="event">
       </origin-pin>
     </li>
     <li class="executive-summary-pin">
-      <app-regional-pin class="pin-view"
-          [contributors]="contributorService.contributors$ | async"
-          [event]="event">
+      <app-regional-pin class="pin-view" [event]="event">
       </app-regional-pin>
     </li>
   </ul>
