--- a/src/app/executive/regional-pin/regional-pin.component.html
+++ b/src/app/executive/regional-pin/regional-pin.component.html
@@ -5,7 +5,7 @@
     </mat-card-title>
     <mat-card-subtitle>
       Contributed by
-      <span [innerHTML]="product | contributorList:event:contributors"></span>
+      <shared-product-attribution [product]="product"></shared-product-attribution>
     </mat-card-subtitle>
     <div mat-card-image id="region-info-map"></div>
     <mat-card-actions>
