Reformat magnitude page, add shared-bubble component

--- a/src/app/origin/magnitude-detail/magnitude-detail.component.html
+++ b/src/app/origin/magnitude-detail/magnitude-detail.component.html
@@ -1,4 +1,4 @@
-<button (click)="onDownload()">Download</button>
+<button (click)="onDownload()" mat-raised-button>Download</button>
 
 <mat-table [dataSource]="dataSource" matSort>
   <!-- render order is defined by columnsToDisplay -->
