--- a/src/app/origin/magnitude/magnitude.component.css
+++ b/src/app/origin/magnitude/magnitude.component.css
@@ -1,1 +1,17 @@
+.magnitude-summary {
+  padding: 0;
+}
 
+.magnitude-summary > li {
+  display: inline-block;
+  line-height: 1;
+  max-width: 100px;
+  text-align: center;
+  width: 25%;
+}
+
+
+mat-expansion-panel-header {
+  color: #00f;
+  text-decoration: underline;
+}
