--- a/src/app/shared/download-dialog/download-dialog.component.html
+++ b/src/app/shared/download-dialog/download-dialog.component.html
@@ -11,5 +11,5 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>Done</button>
+  <button mat-raised-button mat-dialog-close>Done</button>
 </mat-dialog-actions>
