--- a/src/app/impact/dyfi-summary/dyfi-summary.component.html
+++ b/src/app/impact/dyfi-summary/dyfi-summary.component.html
@@ -13,7 +13,10 @@
           <shared-preferred-check [title]="'Preferred DYFI'">
           </shared-preferred-check>
         </ng-container>
-        {{ dyfi.properties.eventsource }}
+        <a [routerLink]="['/', event?.id, 'dyfi']"
+            [queryParams]="{ source: dyfi.source, code: dyfi.code }">
+          {{ dyfi.properties.eventsource.toUpperCase() }}
+        </a>
       </mat-cell>
     </ng-container>
 
