update pin to be executive-region-info-pin

--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -6,9 +6,9 @@
       </executive-origin-pin>
     </li>
     <li class="executive-summary-pin">
-      <region-info-pin class="pin-view"
+      <executive-region-info-pin class="pin-view"
           [event]="event">
-      </region-info-pin>
+      </executive-region-info-pin>
     </li>
   </ul>
   <shared-text-product
