Add "description-table" global css pattern, use in moment-tensor-info component

--- a/src/app/moment-tensor/info/info.component.html
+++ b/src/app/moment-tensor/info/info.component.html
@@ -21,7 +21,7 @@
     </ng-container>
   </h4>
 
-  <dl>
+  <dl class="description-table">
     <dt>Moment</dt>
     <dd>{{ tensor.moment.toExponential(3) }} {{ tensor.units }}</dd>
 
