--- a/src/app/shared/css/description-table.scss
+++ b/src/app/shared/css/description-table.scss
@@ -1,3 +1,18 @@
+/**
+ * A CSS pattern to render description lists (html dl) similar to a material table.
+ * Collapses to a vertical definition list when smaller than 300px.
+ *
+ * Include this css in the global styles.scss,
+ * and add a "description-table" class to the dl element:
+ *
+ * <dl class="description-table">
+ *   <dt>name</dt>
+ *   <dd>value</dd>
+ *
+ *   ...
+ * </dl>
+ */
+
 dl.description-table {
 
   /* default size/color based on mat-header-cell */
@@ -37,14 +52,15 @@ dl.description-table {
       overflow: hidden;
     }
 
+    /* 24px column gaps */
     > dt {
       flex: 1 40%;
-      padding: 16px;
+      padding: 16px 12px 16px 24px;
     }
 
     > dd {
       flex: 1 60%;
-      padding: 15px;
+      padding: 15px 24px 15px 12px;
     }
   }
 }
