--- a/src/app/shakemap/station-list/station-list.component.html
+++ b/src/app/shakemap/station-list/station-list.component.html
@@ -1,3 +1,3 @@
-<div class="station" *ngFor="let station of stations.features">
+<div class="station" *ngFor="let station of stations">
   <shared-station [station]="station"></shared-station>
 </div>
