Update pin components to use basic pin view, update basic pin view to use shared-attribution

--- a/src/app/executive/origin-pin/origin-pin.component.html
+++ b/src/app/executive/origin-pin/origin-pin.component.html
@@ -1,8 +1,9 @@
 <ng-container *ngIf="product">
   <basic-pin
-      [title]=title
-      [link]=link
       [action]=link
+      [event]=event
+      [link]=link
+      [title]=title
       [type]=type>
     <!-- pin content -->
     <dl card-content>
