--- a/src/app/executive/regional-pin/regional-pin.component.html
+++ b/src/app/executive/regional-pin/regional-pin.component.html
@@ -1,7 +1,8 @@
 <basic-pin
-    [title]=title
-    [link]=link
     [action]=link
+    [event]=event
+    [link]=link
+    [title]=title
     [type]=type>
   <div card-image mat-card-image id="region-info-map"></div>
 </basic-pin>
