--- a/src/app/shared/station/station.component.html
+++ b/src/app/shared/station/station.component.html
@@ -1,150 +1,143 @@
-    <div class="station" *ngIf="station">
-        <h3 class="station-name">
-            {{ station.properties.code }}: {{ station.properties.name }}
-        </h3>
+<mat-card *ngIf="station" class="station">
+    <mat-card-title>
+        {{ station.properties.name }}
+    </mat-card-title>
+    <mat-card-subtitle>
+        {{ station.properties.code }}
+    </mat-card-subtitle>
 
-        <div class="data-container">
+    <mat-card-content>
+        <table>
+            <tr>
+                <td class="mmi-td">
+                <!--
+                    <table class="mmi-table"
+                            [style.backgroundColor]="getColor(station.properties.intensity)">
+                            -->
+                    <table class="mmi-table">
+                        <tr>
+                            <th>
+                                <h1>
+                                <!--
+                                    {{ getRoman(station.properties.intensity) }}
+                                    -->
+                                    {{ station.properties.intensity }}
+                                </h1>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                mmi
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <th *ngIf="!isNaN(station.properties.pga)">
+                            {{ station.properties.pga | number }} %g
+                            </th>
+                            <th *ngIf="isNaN(station.properties.pga)">
+                            None
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                pga
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <th *ngIf="!isNaN(station.properties.pgv)">
+                            {{ station.properties.pgv | number }} cm/s
+                            </th>
+                            <th *ngIf="isNaN(station.properties.pgv)">
+                            None
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                pgv
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr>
+                            <th *ngIf="!isNaN(station.properties.distance)">
+                            {{ station.properties.distance }} km
+                            </th>
+                            <th *ngIf="isNaN(station.properties.distance)">
+                            None
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                distance
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
 
-          <table>
-              <tr>
-                  <td class="mmi-td">
-                    <!--
-                      <table class="mmi-table"
-                              [style.backgroundColor]="getColor(station.properties.intensity)">
-                              -->
-                      <table class="mmi-table">
-                          <tr>
-                              <th>
-                                  <h1>
-                                    <!--
-                                      {{ getRoman(station.properties.intensity) }}
-                                      -->
-                                      {{ station.properties.intensity }}
-                                  </h1>
-                              </th>
-                          </tr>
-                          <tr>
-                              <td>
-                                  mmi
-                              </td>
-                          </tr>
-                      </table>
-                  </td>
-                  <td>
-                      <table>
-                          <tr>
-                              <th *ngIf="!isNaN(station.properties.pga)">
-                                {{ station.properties.pga | number }} %g
-                              </th>
-                              <th *ngIf="isNaN(station.properties.pga)">
-                                None
-                              </th>
-                          </tr>
-                          <tr>
-                              <td>
-                                  pga
-                              </td>
-                          </tr>
-                      </table>
-                  </td>
-                  <td>
-                      <table>
-                          <tr>
-                              <th *ngIf="!isNaN(station.properties.pgv)">
-                                {{ station.properties.pgv | number }} cm/s
-                              </th>
-                              <th *ngIf="isNaN(station.properties.pgv)">
-                                None
-                              </th>
-                          </tr>
-                          <tr>
-                              <td>
-                                  pgv
-                              </td>
-                          </tr>
-                      </table>
-                  </td>
-                  <td>
-                      <table>
-                          <tr>
-                              <th *ngIf="!isNaN(station.properties.distance)">
-                                {{ station.properties.distance }} km
-                              </th>
-                              <th *ngIf="isNaN(station.properties.distance)">
-                                None
-                              </th>
-                          </tr>
-                          <tr>
-                              <td>
-                                  distance
-                              </td>
-                          </tr>
-                      </table>
-                  </td>
-              </tr>
-          </table>
+        <mat-expansion-panel class="details">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    Details
+                </mat-panel-title>
+            </mat-expansion-panel-header>
 
-          <div class="details-container">
-            <div class="details-toggle link">
-              <h3 (click)="toggleDetails(station)">
-                  <div class="icon" *ngIf="station.showDetails">
-                    <mat-icon>keyboard_arrow_up</mat-icon>
-                  </div>
-                  <div class="icon" *ngIf="!station.showDetails">
-                    <mat-icon>keyboard_arrow_down</mat-icon>
-                  </div>
-                
-                <div class="link">
-                  Details
-                </div>
-              </h3>
-            </div>
-
-            <div class="details" *ngIf="station.showDetails">
-              <div class = "column">
+            <div class="details">
+                <div class = "column">
                 <dl class="station-metadata vertical">
-                  <dt class="station-metadata-network">Network</dt>
-                  <dd class="station-metadata-network">{{ station.properties.network }}</dd>
-                  <dt class="station-metadata-location">Location</dt>
-                  <dd class="station-metadata-location">{{ station.geometry.coordinates[1] }}°N 
+                    <dt class="station-metadata-network">Network</dt>
+                    <dd class="station-metadata-network">{{ station.properties.network }}</dd>
+                    <dt class="station-metadata-location">Location</dt>
+                    <dd class="station-metadata-location">{{ station.geometry.coordinates[1] }}°N 
                                                         {{ station.geometry.coordinates[0] * -1 }}°W</dd>
-                  <dt class="station-metadata-source">Source</dt>
-                  <dd class="station-metadata-source">{{ station.properties.source }}</dd>
-                  <dt class="station-metadata-intensity">Intensity</dt>
-                  <dd class="station-metadata-intensity">{{ station.properties.intensity }}</dd>
+                    <dt class="station-metadata-source">Source</dt>
+                    <dd class="station-metadata-source">{{ station.properties.source }}</dd>
+                    <dt class="station-metadata-intensity">Intensity</dt>
+                    <dd class="station-metadata-intensity">{{ station.properties.intensity }}</dd>
                 </dl>
-              </div>
-              
-              <div class="column">
+                </div>
+                
+                <div class="column">
                 <table class="data-table">
-                  <thead>
+                    <thead>
                     <th>name</th>
                     <th>pga</th>
                     <th>pgv</th>
                     <th>psa03</th>
                     <th>psa10</th>
                     <th>psa30</th>
-                  </thead>
-                  <tbody>
+                    </thead>
+                    <tbody>
                     <tr *ngFor="let channel of station.properties.channels">
-                      <th>
+                        <th>
                         {{ channel.name }}
-                      </th>
-                      <td>{{ getAmp('pga', channel.amplitudes).value | number }}</td>
-                      <td>{{ getAmp('pgv', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('psa03', channel.amplitudes).value">{{ getAmp('psa03', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('psa10', channel.amplitudes).value">{{ getAmp('psa10', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('psa30', channel.amplitudes).value">{{ getAmp('psa30', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('sa(0.3)', channel.amplitudes).value">{{ getAmp('sa(0.3)', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('sa(1.0)', channel.amplitudes).value">{{ getAmp('sa(1.0)', channel.amplitudes).value | number }}</td>
-                      <td *ngIf="getAmp('sa(3.0)', channel.amplitudes).value">{{ getAmp('sa(3.0)', channel.amplitudes).value | number }}</td>
+                        </th>
+                        <td>{{ getAmp('pga', channel.amplitudes).value | number }}</td>
+                        <td>{{ getAmp('pgv', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('psa03', channel.amplitudes).value">{{ getAmp('psa03', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('psa10', channel.amplitudes).value">{{ getAmp('psa10', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('psa30', channel.amplitudes).value">{{ getAmp('psa30', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('sa(0.3)', channel.amplitudes).value">{{ getAmp('sa(0.3)', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('sa(1.0)', channel.amplitudes).value">{{ getAmp('sa(1.0)', channel.amplitudes).value | number }}</td>
+                        <td *ngIf="getAmp('sa(3.0)', channel.amplitudes).value">{{ getAmp('sa(3.0)', channel.amplitudes).value | number }}</td>
                     </tr>
-                  </tbody>
+                    </tbody>
                 </table>
-              </div>
+                </div>
 
             </div>
-          </div>
+        </mat-expansion-panel>
 
-        </div>
-    </div>
+    </mat-card-content>
+</mat-card>
