--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -1,31 +1,40 @@
-<ng-container *ngIf="eventService.event$ | async; let event">
+<ng-container *ngIf="event">
+
+  <shared-text-product
+      *ngFor="let product of generalHeaders"
+      [product]="product">
+  </shared-text-product>
+
   <ul class="executive-summary-pins">
     <li class="executive-summary-pin">
-      <executive-origin-pin class="pin-view"
-          [event]="event">
-      </executive-origin-pin>
-    </li>
-    <li class="executive-summary-pin">
-      <executive-region-info-pin class="pin-view"
-          [event]="event">
+      <executive-region-info-pin [event]="event" class="pin-view">
       </executive-region-info-pin>
     </li>
+
+    <li class="executive-summary-pin" *ngIf="origin">
+      <executive-origin-pin [product]="origin" class="pin-view">
+      </executive-origin-pin>
+    </li>
+
     <li class="executive-summary-pin" *ngIf="momentTensor">
-      <executive-moment-tensor-pin class="pin-view" [product]="momentTensor">
+      <executive-moment-tensor-pin [product]="momentTensor" class="pin-view">
       </executive-moment-tensor-pin>
     </li>
   </ul>
+
   <shared-text-product
-      *ngFor="let product of event.getProducts('general-text')"
+      *ngFor="let product of generalTexts"
       [product]="product">
   </shared-text-product>
-  <ng-container *ngIf="event.hasProducts('general-link')">
+
+  <ng-container *ngIf="generalLinks && generalLinks.length">
     <h3>For More Information</h3>
     <ul>
-    <li *ngFor="let product of event.getProducts('general-link')">
+    <li *ngFor="let product of generalLinks">
       <shared-link-product [product]="product">
       </shared-link-product>
     </li>
     </ul>
   </ng-container>
+
 </ng-container>
