removed variable that was not needed in alert-level, added styles and test

--- a/src/app/shared/alert-level/alert-level.component.html
+++ b/src/app/shared/alert-level/alert-level.component.html
@@ -1,5 +1,5 @@
-<span class="mmi pager-alertlevel-{{color}}">
+<span class="mmi pager-alertlevel-{{alertLevel}}">
   <span class="roman">
-    <strong>{{color | uppercase}}</strong>
+    <strong>{{alertLevel | uppercase}}</strong>
   </span>
 </span>
