--- a/src/app/shared/alert-level/alert-level.component.scss
+++ b/src/app/shared/alert-level/alert-level.component.scss
@@ -20,7 +20,7 @@ $mmi-font-family: Tahoma, Verdana, Segoe, sans-serif;
 .mmi {
   border-radius: 2px;
   box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
-  padding: 0.5em 0;
+  padding: 0.6em;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 
