--- a/src/app/shared/mmi/mmi.component.scss
+++ b/src/app/shared/mmi/mmi.component.scss
@@ -40,13 +40,13 @@ $mmiXII-text-color: #000000;
 
 .mmi {
   display: inline-block;
-  line-height: 1;
   text-align: center;
 
   > span {
     display: block;
     max-width: 100%;
     color: #000;
+
   }
 
   > abbr {
@@ -58,7 +58,7 @@ $mmiXII-text-color: #000000;
 .mmi {
   border-radius: 2px;
   box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
-  padding: 0.5em 0;
+  padding: 0.5em;
   text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 
