Attempt to minimize excessive change detection

--- a/src/app/executive/region-info-pin/region-info-pin.component.html
+++ b/src/app/executive/region-info-pin/region-info-pin.component.html
@@ -2,5 +2,6 @@
       [product]="product"
       [link]="link"
       [title]="title">
-  <div card-image mat-card-image #regionInfoMap class="map"></div>
+  <div card-image mat-card-image #regionInfoMap class="map"
+      (mousemove)="$event.stopPropagation"></div>
 </basic-pin>
